Implementações de banco de dados e generic DAO.